# damy-model

./: .gitignore  app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  serve.py
cli/: predict.py
data/processed/cnn/: cnn_config.json  cnn_metadata.csv  cnn_mock.metrics.json  cnn_oof.npz
data/processed/ensemble/: blend_probs.json  blend_probs.npz
data/processed/lightgbm/: features.parquet  lightgbm_mock.txt  lightgbm_mock_cv.json
data/raw/mock/kepler/: 10149023_kepler_mock.fits  10153011_kepler_mock.fits  10295951_kepler_mock.fits  10319385_kepler_mock.fits  10341913_kepler_mock.fits  10419211_kepler_mock.fits  10464078_kepler_mock.fits  10480921_kepler_mock.fits  10480982_kepler_mock.fits  10485069_kepler_mock.fits  10485250_kepler_mock.fits  10526549_kepler_mock.fits  10583066_kepler_mock.fits  10583180_kepler_mock.fits  10601284_kepler_mock.fits  10662202_kepler_mock.fits  10666592_kepler_mock.fits  10682541_kepler_mock.fits  10749128_kepler_mock.fits  10797460_kepler_mock.fits  10811496_kepler_mock.fits  10848459_kepler_mock.fits  10854555_kepler_mock.fits  10867062_kepler_mock.fits  10872983_kepler_mock.fits  10875245_kepler_mock.fits  10910878_kepler_mock.fits  10928043_kepler_mock.fits  10984090_kepler_mock.fits  10987985_kepler_mock.fits  11013201_kepler_mock.fits  11018648_kepler_mock.fits  11026304_kepler_mock.fits  11075279_kepler_mock.fits  11138155_kepler_mock.fits  11152159_kepler_mock.fits  11153539_kepler_mock.fits  11180361_kepler_mock.fits  11192141_kepler_mock.fits  (+253 more)
src/lightkurve_dataset/: inference.py
